# contract-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.circleci/: config.yml
.streamlit/: config.toml  secrets.example.toml
app/: config_loader.py  streamlit_app.py
app/mappings/: csv_mapping.yaml  excel_mapping.yaml
app/models/: schemas.py
app/policies/: vocab.yaml
app/sample_data/: example_input.txt
app/services/: __init__.py  audit.py  basic_auth.py  csv_writer.py  desired_contract.py  excel_writer.py  extractor.py  gemini_client.py  normalizer.py  plaintext_writer.py  text_loader.py  validator.py
app/templates/: request_form_template.xlsx
tests/: test_basic_auth.py  test_csv_writer.py  test_desired_contract.py  test_extractor.py  test_plaintext_writer.py  test_text_loader.py
